--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.3.3",
-        "guzzlehttp/guzzle": "~5.2"
+        "guzzlehttp/guzzle": "~5.2",
+        "ext-mbstring": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1",
